# Irvusbot

./: ai_handler.py  app.py  bot.js  bot.py  buy_alert.py  chain_monitor.py  chain_rpc.py  database.py  main.py  message_router.py  monitor.py  package.json  pyproject.toml  replit.md  requirements.txt  run_bot.py
Bot/: ai_features.py  dex_tracker.py  main.py
Bot/handlers/: ai_commands.py
bot/: ai_features.py  database.py  health.py
bot/data/: bot.db
bot/handlers/: settings.py  setup.py
